# VideoCaptioner

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: __init__.py  compare.py  evaluate.py  metrics.py  report.py  resources.py  run.py  schema.py
chat-coach/: C002-C018-final-validation.md  C021-final-validation.md  C022-C026-final-validation.md  C027-C031-final-validation.md  README.md  analysis-method.md  course-processing-status.md  dify-product-target.md  knowledge-object-schema.md  项目唯一总台账.md
docs/: 00-总体方案.md  01-任务拆分.md  02-Agent协作与交付规范.md  CCSWITCH-阿峰前20课收尾交接.md  CURSOR-HANDOFF.md  CURSOR-NEXT-前20课事实与证据层.md  MiMo-V2.5-Pro-课程方法沉淀与忠实度审查Prompt.md  adaptive-sampling.md  afeng-method-layer.md  afeng-next-execution-plan.md  environment.md  evaluation-example-report.md  evaluation-real-video.md  evaluation.md  knowledge-pipeline.md  processing-profiles.md  region-disk-iteration.md  web.md  阿峰课程方法知识库-重构与后续执行方案.md
scripts/: audit_afeng_production.py  benchmark_adaptive_sampling.py  build_afeng_backup_manifest.py  build_afeng_dify_bundle.py  build_evidence_baseline_hybrid.py  build_evidence_quality_report.py  build_knowledge_quality_report.py  compare_afeng_pilot_payloads.py  compare_p03_versions.py  create_formal_dataset.py  deploy_afeng_dify_app.py  dry_run_afeng_restore.py  export_chat_coach_source_packets.py  prepare_afeng_app_index.py  prepare_afeng_pilot.py  probe_local_embedding.py  rebuild_changed_p04.py  refresh_evidence_baseline_qa.py  rerun_visual_version.py  run_afeng_app_acceptance.py  run_afeng_pilot_model.py  run_afeng_retrieval_test.py  run_mechanical_course_batch.py  run_mechanical_waves_to_95.py  run_p03_v003_regression.py  setup_v2_dataset.py  start_evidence_wave.ps1  start_wave_C006_C010.ps1  start_wave_C011_C015.ps1  summarize_afeng_model_run.py  sync_and_test_v2.py  validate_afeng_citations.py  verify_afeng_release_bundle.py  verify_runtime.py  wait_then_finalize_evidence.ps1  wait_then_finalize_knowledge.ps1  wait_then_prepare_afeng_pilot.ps1  wait_then_run_batch.ps1  wait_then_run_cursor_p02.ps1  wait_then_run_cursor_p03.ps1  (+5 more)
tests/: test_analysis_cli.py  test_models.py  test_pipeline.py  (+2 more)
(+1395 files in other folders)
