[project]
name = "course-video-analyzer"
version = "0.1.0"
description = "Local course video analysis with speaker diarization and board OCR"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.10",
]

[project.urls]
Homepage = "https://github.com/WenzhengLi/VideoCaptioner"
Repository = "https://github.com/WenzhengLi/VideoCaptioner.git"
Issues = "https://github.com/WenzhengLi/VideoCaptioner/issues"
Documentation = "https://github.com/WenzhengLi/VideoCaptioner/tree/master/docs"

[project.optional-dependencies]
web = [
    "gradio>=5.0",
]
audio = [
    "torch>=2.2,<2.7",
    "torchaudio>=2.2,<2.7",
    "numpy>=1.26",
    "scipy>=1.11",
    "funasr>=1.2",
    "modelscope>=1.20",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.38",
    "scikit-learn>=1.4,<1.8",
    "onnxruntime>=1.17",
    "wespeaker",
]
vision = [
    "opencv-python>=4.10",
    "imagehash>=4.3",
    "paddleocr>=3.0",
    "paddlepaddle==3.2.2",
    "pillow>=11.0",
    "scikit-image>=0.24",
    "numpy>=1.26",
]

[project.scripts]
course-video-web = "course_video_analyzer.web:main"
course-video-benchmark = "benchmarks.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/course_video_analyzer", "benchmarks"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.9",
]

[tool.uv.sources]
wespeaker = { git = "https://github.com/wenet-e2e/wespeaker.git", rev = "dfa741957e5c11f477623b6e583d67d0af25ee88" }
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require real models, GPU, FFmpeg media, or network",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
include = ["src", "tests", "scripts", "benchmarks"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
